--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
     "husky": "^7.0.0"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
+    "express": "^4.18.1",
+    "joi": "^17.6.0",
     "prop-types": "^15.8.1",
     "ra-data-json-server": "^4.1.0",
-    "react-admin": "^4.1.0"
+    "react-admin": "^4.1.0",
+    "react-bootstrap": "^2.4.0"
   }
 }
