--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "template-frontend",
   "private": true,
+  "proxy": "http://localhost:5000",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
