--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "husky": "^7.0.0"
   },
   "dependencies": {
+    "@mui/material": "^5.8.3",
     "bootstrap": "^5.1.3",
     "express": "^4.18.1",
     "joi": "^17.6.0",
