--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,8 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
-    "axios": "^0.27.2",
     "@mui/material": "^5.8.3",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
@@ -32,6 +32,7 @@
     "eslint": "^8.11.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-import-resolver-custom-alias": "^1.3.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
