--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.1",
     "joi": "^17.6.0",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.7.5",
     "template-fullstack": "file:.."
   },
   "rules": {
