--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@mui/material": "^5.8.3",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "firebase": "^9.9.1",
     "joi": "^17.6.0",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
